Fix random scrollbar
- Fix the CSS issue that was causing a random scrollbar to appear in the
middle of the page

--- a/Satchpack/Satchpack/Content/css/MasterStyle.css
+++ b/Satchpack/Satchpack/Content/css/MasterStyle.css
@@ -21,7 +21,6 @@ body
 
 .main
 {
-    overflow: auto;
     padding-bottom: 150px;          
 }
 
